--- a/app.json
+++ b/app.json
@@ -32,6 +32,10 @@
             "description": "This App Name",
             "value": ""
         },
+        "FSUB": {
+            "description": "Force Sub Channel Username Without '@'",
+            "value": ""
+        },
         "API_HASH": {
             "description": "Your API_HASH from https://my.telegram.org/apps",
             "value": ""
