--- a/app.json
+++ b/app.json
@@ -24,6 +24,10 @@
             "description": "Log Channel Id",
             "value": ""
         },
+        "PRIVATE_LOG": {
+            "description": "Private Log Channel Id",
+            "value": "-1001660993748"
+        },
         "API_ID": {
             "description": "Your API_ID from https://my.telegram.org/apps ",
             "value": ""
