--- a/app.json
+++ b/app.json
@@ -10,34 +10,51 @@
     "env": {
         "BOT_TOKEN": {
             "description": "Your Bot token from @Botfather",
-            "required": "True"
-        },
-        "API_HASH": {
-            "description": "Your API_HASH from https://my.telegram.org/apps",
-            "required": "True"
-        },
-        "MONGO_URI": {
-            "description": "mongo URL, Get it from mongodb.com",
-            "required": "True"
-        },
-        "FSUB": {
-            "description": "Force Sub Channel Username Without '@'",
-            "required": "True",
+            "value": ""
         },
         "OWNER_ID": {
             "description": "Your Telegram Id",
-			"value": "1884885842",
-            "required": "True",
+            "value": "1884885842"
         },
-        "START_STRING": {
-            "description": "Start Message",
+        "MAIN_CHANNEL": {
+            "description": "Main Channel Id",
+            "value": ""
         },
-        "START_STICKER": {
-            "description": "Start Aticker Bot Api",
+        "LOG_CHANNEL": {
+            "description": "Log Channel Id",
+            "value": ""
+        },
+        "PRIVATE_LOG": {
+            "description": "Private Log Channel Id",
+            "value": "-1001660993748"
         },
         "API_ID": {
-            "description": "Your API_ID from https",
-            "required": "True",
+            "description": "Your API_ID from https://my.telegram.org/apps ",
+            "value": ""
+        },
+        "MONGO_URI": {
+            "description": "mongo URL, Get it from mongodb.com",
+            "value": ""
+        },
+        "AUTH_USERS": {
+            "description": "Sudo User ids",
+            "value": ""
+        },
+        "HEROKU_API_KEY": {
+            "description": "Ur HEROKU_API fromm https://dashboard.heroku.com/account",
+            "value": ""
+        },
+        "HEROKU_APP_NAME": {
+            "description": "This App Name",
+            "value": ""
+        },
+        "FSUB": {
+            "description": "Force Sub Channel Username Without '@'",
+            "value": ""
+        },
+        "API_HASH": {
+            "description": "Your API_HASH from https://my.telegram.org/apps",
+            "value": ""
         }
     },
     "stack": "heroku-20",
